# sensecap-emotion-watcher

./: .gitignore  README.md
docs/: CIRCE_future_functionality_roadmap_reference.md  PHASE-1-REPORT.md  PHASE-1.5-REPORT.md  PHASE-1.75-REPORT.md  PHASE-2-REPORT.md  PHASE-3-HARDWARE-VALIDATION.md  PHASE-3-REPORT.md  PHASE-4-REPORT.md  PHASE-BODY-HEAT-MAP-MVP-REPORT.md  PHASE-CAMERA-MEMORIES-MVP-REPORT.md  PHASE-COLOR-PICKER-FIELD-POLISH-MVP-REPORT.md  PHASE-CONVERSATION-ENGINE-COPY-POLISH-REPORT.md  PHASE-DAILY-COMPANION-MVP-REPORT.md  PHASE-DIAGNOSTICS-WORKER-COLOR-V2-PLAN-REPORT.md  PHASE-EMOTIONAL-COLOR-INTELLIGENCE-MVP-REPORT.md  PHASE-FAT-EXTENSION-REPAIR-REPORT.md  PHASE-FAT-RENAME-REPAIR-REPORT.md  PHASE-GROUNDING-BREATHING-MVP-REPORT.md  PHASE-HOME-SLOT-WHEEL-MENU-REPORT.md  PHASE-RTC-TIME-REPORT.md  (+18 more)
firmware/circe/main/: CMakeLists.txt  circe_actions.c  circe_actions.h  circe_body_map.c  circe_body_map.h  circe_buf.c  circe_buf.h  circe_color_intel.c  circe_color_intel.h  circe_color_picker.c  circe_color_picker.h  circe_conversation_engine.c  circe_conversation_engine.h  circe_copy.c  circe_copy.h  circe_daily.c  circe_daily.h  circe_encoder.c  circe_encoder.h  circe_entry.c  circe_entry.h  circe_entry_modes.c  circe_entry_modes.h  circe_fonts.c  circe_fonts.h  circe_home_bg.c  circe_home_bg.h  circe_home_wheel.c  circe_home_wheel.h  circe_hud.c  circe_hud.h  circe_index.c  circe_index.h  circe_memory_browser.c  circe_memory_browser.h  circe_patterns.c  circe_patterns.h  circe_photo.c  circe_photo.h  circe_reflection.c  (+39 more)
firmware/circe/main/assets/: circe_homepage_bg.c  circe_homepage_bg.h
(+125 files in other folders)
