idf_component_register(
    SRCS
        "main.c"
        "circe_entry.c"
        "circe_copy.c"
        "circe_conversation_engine.c"
        "circe_entry_modes.c"
        "circe_index.c"
        "circe_storage.c"
        "circe_storage_paths.c"
        "circe_time.c"
        "circe_time_picker.c"
        "circe_color_picker.c"
        "circe_color_intel.c"
        "circe_regulation.c"
        "circe_home_wheel.c"
        "circe_reflection.c"
        "circe_timeline.c"
        "circe_memory_browser.c"
        "circe_patterns.c"
        "circe_photo.c"
        "circe_voice.c"
        "circe_buf.c"
        "circe_save.c"
        "circe_theme.c"
        "circe_fonts.c"
        "circe_hud.c"
        "circe_ring_anchors.c"
        "circe_actions.c"
        "circe_voice_state_ui.c"
        "circe_strand_cache.c"
        "circe_worker.c"
        "circe_terminal.c"
        "circe_ui.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES sensecap-watcher cjson nvs_flash esp_io_expander esp_io_expander_pca95xx_16bit esp_lvgl_port sscma_client knob fatfs
)
